src/styles/global.css
@import "tailwindcss";

@utility scrollbar-none {
    scrollbar-width: none;
    &::-webkit-scrollbar {
        display: none;
    }
}

@font-face {
    font-family: 'noto-serif';
    src: url('/fonts/noto-serif/noto-serif-latin-400-normal.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'barlow';
    src: url('/fonts/barlow/barlow-latin-400-normal.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'marcellus';
    src: url('/fonts/marcellus/marcellus-v13-latin-regular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'inknut-antiqua';
    src: url('/fonts/inknut-antiqua/inknut-antiqua-latin-300-normal.woff2') format('woff2');
    font-weight: 300;
    font-style: normal;
    font-display: swap;
}

@theme {
    --font-noto: 'noto-serif', 'sans-serif';
    --font-barlow: 'barlow', 'sans-serif';
    --font-marcellus: 'marcellus', 'sans-serif';
    --font-inknut: 'inknut-antiqua', 'serif';
    --text-tiny: 0.7rem; 
    --text-x-tiny: 0.65rem; 
    --color-pearl: #E6DECA;
    --color-jonquil: #FFCF00;
    --color-madder: #A31621;
    --color-madder-dark: #36100F;
    --color-gray: #332F31;
    --color-dd-blue: #101126;
    --color-dd-blue-bg: #0c0d18;
    --color-aa-purple: #29242b;
    --color-aa-purple-bg: #1e1b21;
    --color-wow-green: #19341a;
    --color-wow-green-bg: #121a13;

    --animate-glow: glow 3s ease-in-out infinite;
    --animate-spin-y: spin-y 4s linear infinite;

    @keyframes spin-y {
        0% {
            transform: rotateY(0deg);
        }
        100% {
            transform: rotateY(360deg);
        }
    }

    @keyframes glow {
        0%, 100% {
            filter: drop-shadow(0 0 6px rgba(255, 207, 0, 0.4));
        }
        50% {
            filter: drop-shadow(0 0 20px rgba(255, 207, 0, 0.8)) drop-shadow(0 0 40px rgba(255, 207, 0, 0.4));
        }
    }
}

